--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -44,7 +44,10 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
+       <string notr="true">background-color: rgb(237, 212, 0);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::WinPanel</enum>
       </property>
       <property name="text">
        <string>Линия</string>
@@ -92,7 +95,10 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
+       <string notr="true">background-color: rgb(237, 212, 0);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::WinPanel</enum>
       </property>
       <property name="text">
        <string>Связь</string>
@@ -125,7 +131,13 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
+       <string notr="true">background-color: rgb(237, 212, 0);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::WinPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
       </property>
       <property name="text">
        <string>Наименование продукции</string>
@@ -158,7 +170,13 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
+       <string notr="true">background-color: rgb(237, 212, 0);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::WinPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
       </property>
       <property name="text">
        <string>План</string>
@@ -191,7 +209,10 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
+       <string notr="true">background-color: rgb(237, 212, 0);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::WinPanel</enum>
       </property>
       <property name="text">
        <string>Факт</string>
@@ -227,10 +248,13 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
+       <string notr="true">background-color: rgb(237, 212, 0);</string>
       </property>
       <property name="text">
        <string>+</string>
+      </property>
+      <property name="flat">
+       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -260,7 +284,7 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
+       <string notr="true">background-color: rgb(237, 212, 0);</string>
       </property>
       <item>
        <property name="text">
@@ -313,10 +337,19 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
+       <string notr="true">background-color: rgb(237, 212, 0);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::WinPanel</enum>
       </property>
       <property name="text">
        <string>Создать товар для линии</string>
+      </property>
+      <property name="scaledContents">
+       <bool>false</bool>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -328,10 +361,19 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);</string>
+       <string notr="true">background-color: rgb(237, 212, 0);</string>
       </property>
       <property name="text">
        <string>Создать шаблон</string>
+      </property>
+      <property name="checkable">
+       <bool>false</bool>
+      </property>
+      <property name="default">
+       <bool>true</bool>
+      </property>
+      <property name="flat">
+       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -364,9 +406,12 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(141, 255, 255);
+       <string notr="true">background-color: rgb(237, 212, 0);
 font-family: Arial;
 color: rgb(255, 255, 255);font-weight: bold;</string>
+      </property>
+      <property name="frame">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
