--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1079</width>
-    <height>566</height>
+    <width>1157</width>
+    <height>578</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -128,6 +128,42 @@
         </property>
         <property name="text">
          <string>Наименование продукции</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="date_label">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>90</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>14</pointsize>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(237, 212, 0);</string>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::WinPanel</enum>
+        </property>
+        <property name="text">
+         <string>Дата</string>
         </property>
        </widget>
       </item>
@@ -308,32 +344,7 @@ border: 2px solid black;</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="0">
-          <widget class="QLabel" name="create_template_label">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="font">
-            <font>
-             <pointsize>14</pointsize>
-            </font>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(237, 212, 0);
-border: 2px solid black;</string>
-           </property>
-           <property name="text">
-            <string>Создать шаблон</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
+         <item row="1" column="2">
           <widget class="QPushButton" name="make_template_pushbutton">
            <property name="minimumSize">
             <size>
@@ -366,6 +377,43 @@ border: 2px solid black;</string>
            </property>
           </widget>
          </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="create_template_label">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>14</pointsize>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(237, 212, 0);
+border: 2px solid black;</string>
+           </property>
+           <property name="text">
+            <string>Создать шаблон</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QLineEdit" name="date_make_template_line_edit">
+           <property name="font">
+            <font>
+             <pointsize>14</pointsize>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(237, 212, 0);</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </item>
@@ -393,13 +441,28 @@ border: 2px solid black;</string>
          <string/>
         </property>
         <layout class="QGridLayout" name="gridLayout_3">
-         <item row="3" column="0" colspan="2">
-          <widget class="QComboBox" name="product_name_for_task_combobox">
+         <item row="3" column="4">
+          <widget class="QPushButton" name="add_line_pushbutton">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>30</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>30</width>
+             <height>16777215</height>
+            </size>
            </property>
            <property name="font">
             <font>
@@ -415,9 +478,15 @@ font-family: Arial;
 color: rgb(255, 255, 255);font-weight: bold;
 border: 2px solid black;</string>
            </property>
+           <property name="text">
+            <string>+</string>
+           </property>
+           <property name="flat">
+            <bool>false</bool>
+           </property>
           </widget>
          </item>
-         <item row="3" column="2">
+         <item row="3" column="3">
           <widget class="QComboBox" name="line_number_choose_combobox">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -488,28 +557,13 @@ border: 2px solid black;</string>
            </item>
           </widget>
          </item>
-         <item row="3" column="3">
-          <widget class="QPushButton" name="add_line_pushbutton">
-           <property name="enabled">
-            <bool>true</bool>
-           </property>
+         <item row="3" column="0" colspan="2">
+          <widget class="QComboBox" name="product_name_for_task_combobox">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>30</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>30</width>
-             <height>16777215</height>
-            </size>
            </property>
            <property name="font">
             <font>
@@ -525,15 +579,27 @@ font-family: Arial;
 color: rgb(255, 255, 255);font-weight: bold;
 border: 2px solid black;</string>
            </property>
-           <property name="text">
-            <string>+</string>
+          </widget>
+         </item>
+         <item row="3" column="2">
+          <widget class="QLineEdit" name="date_line_edit">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
            </property>
-           <property name="flat">
-            <bool>false</bool>
+           <property name="font">
+            <font>
+             <pointsize>14</pointsize>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(237, 212, 0);</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
+         <item row="0" column="1" colspan="2">
           <widget class="QLabel" name="create_line_label">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -596,7 +662,7 @@ border: 2px solid black;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1079</width>
+     <width>1157</width>
      <height>22</height>
     </rect>
    </property>
