--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -40,7 +40,7 @@
          <string/>
         </property>
         <layout class="QGridLayout" name="gridLayout_6">
-         <item row="1" column="0">
+         <item row="2" column="0">
           <widget class="QComboBox" name="product_name_combobox">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -79,7 +79,48 @@ border: 2px solid black;</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="1">
+         <item row="0" column="0">
+          <widget class="QLabel" name="create_template_label">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>14</pointsize>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(237, 212, 0);
+border: 2px solid black;</string>
+           </property>
+           <property name="text">
+            <string>Создать шаблон</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QPushButton" name="copy_button">
+           <property name="font">
+            <font>
+             <pointsize>14</pointsize>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(237, 212, 0);
+border: 2px solid black;</string>
+           </property>
+           <property name="text">
+            <string>скопировать</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
           <widget class="QPushButton" name="make_template_pushbutton">
            <property name="minimumSize">
             <size>
@@ -109,31 +150,6 @@ border: 2px solid black;</string>
            </property>
            <property name="text">
             <string>+</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0">
-          <widget class="QLabel" name="create_template_label">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="font">
-            <font>
-             <pointsize>14</pointsize>
-            </font>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(237, 212, 0);
-border: 2px solid black;</string>
-           </property>
-           <property name="text">
-            <string>Создать шаблон</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
            </property>
           </widget>
          </item>
