--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1158</width>
+    <width>1194</width>
     <height>578</height>
    </rect>
   </property>
@@ -450,7 +450,7 @@ border: 2px solid black;</string>
          <string/>
         </property>
         <layout class="QGridLayout" name="gridLayout_3">
-         <item row="3" column="4">
+         <item row="3" column="5">
           <widget class="QPushButton" name="add_line_pushbutton">
            <property name="enabled">
             <bool>true</bool>
@@ -495,7 +495,43 @@ border: 2px solid black;</string>
            </property>
           </widget>
          </item>
-         <item row="3" column="3">
+         <item row="0" column="1" colspan="2">
+          <widget class="QLabel" name="create_line_label">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>14</pointsize>
+            </font>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::StrongFocus</enum>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(237, 212, 0);</string>
+           </property>
+           <property name="frameShape">
+            <enum>QFrame::WinPanel</enum>
+           </property>
+           <property name="text">
+            <string>Создать производственное задание</string>
+           </property>
+           <property name="scaledContents">
+            <bool>false</bool>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+           <property name="wordWrap">
+            <bool>false</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="4">
           <widget class="QComboBox" name="line_number_choose_combobox">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -608,39 +644,42 @@ border: 2px solid black;</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="1" colspan="2">
-          <widget class="QLabel" name="create_line_label">
+         <item row="3" column="3">
+          <widget class="QLineEdit" name="create_plan_line_edit">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="minimumSize">
+            <size>
+             <width>100</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>130</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="font">
             <font>
+             <family>Arial</family>
              <pointsize>14</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
-           <property name="focusPolicy">
-            <enum>Qt::StrongFocus</enum>
-           </property>
            <property name="styleSheet">
-            <string notr="true">background-color: rgb(237, 212, 0);</string>
-           </property>
-           <property name="frameShape">
-            <enum>QFrame::WinPanel</enum>
+            <string notr="true">background-color: rgb(237, 212, 0);
+font-family: Arial;
+color: rgb(255, 255, 255);font-weight: bold;
+border: 2px solid black;</string>
            </property>
            <property name="text">
-            <string>Создать производственное задание</string>
-           </property>
-           <property name="scaledContents">
-            <bool>false</bool>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
-           </property>
-           <property name="wordWrap">
-            <bool>false</bool>
+            <string>План задать</string>
            </property>
           </widget>
          </item>
@@ -699,7 +738,7 @@ border: 2px solid black;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1158</width>
+     <width>1194</width>
      <height>22</height>
     </rect>
    </property>
