--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -679,7 +679,7 @@ color: rgb(255, 255, 255);font-weight: bold;
 border: 2px solid black;</string>
            </property>
            <property name="text">
-            <string>План задать</string>
+            <string/>
            </property>
           </widget>
          </item>
